# gsd

./: .gitignore  CODING_STANDARDS.md  Cargo.toml  FUTURE.md  FUTURE_REFACTORS.md  MENTAL_MODEL.md  README.md  TODO.md  bacon.toml
.claude/: claude.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/agent_pool/: AGENT_INSTRUCTIONS.md  AGENT_PROTOCOL.md  Cargo.toml  LOW_LEVEL_PROTOCOL.md  README.md  SUBMISSION_PROTOCOL.md  TRANSPORT_ABSTRACTION.md
crates/agent_pool/demos/: greeting.sh  many-agents.sh  single-agent-queue.sh  single-basic.sh
crates/agent_pool/protocols/: AGENT_INSTRUCTIONS.md  AGENT_PROTOCOL.md  SUBMISSION_PROTOCOL.md
crates/agent_pool/scripts/: command-agent.sh  echo-agent.sh  greeting-agent.sh
crates/agent_pool/src/: agent.rs  constants.rs  daemon.rs  executor.rs  fs.rs  fs_util.rs  lib.rs  lock.rs  main.rs  pool.rs  response.rs  stop.rs  submit_file.rs  transport.rs  types.rs  verified_watcher.rs  worker.rs
crates/agent_pool/src/client/: mod.rs  submit.rs  submit_file.rs
crates/agent_pool/src/daemon/: core.rs  io.rs  path_category.rs  wiring.rs
crates/agent_pool/src/submit/: file.rs  mod.rs  payload.rs  socket.rs  stop.rs
crates/agent_pool/src/v2/: core.rs  mod.rs
crates/agent_pool/tests/: README.md  greeting.rs  health_check.rs  integration.rs  many_agents.rs  single_agent_queue.rs  single_basic.rs
crates/agent_pool/tests/common/: mod.rs
crates/agent_pool_cli/: Cargo.toml  build.rs
crates/agent_pool_cli/src/: lib.rs  main.rs
crates/cli_invoker/: Cargo.toml
crates/gsd_cli/: Cargo.toml  build.rs
crates/gsd_cli/demos/: branching.sh  command.sh  docs-and-validate.sh  fan-out.sh  linear.sh  simple.sh
crates/gsd_cli/demos/branching/: config.jsonc  demo.sh
crates/gsd_cli/demos/command/: demo.sh
crates/gsd_cli/demos/command-script/: config.jsonc  demo.sh  list-files.sh
crates/gsd_cli/demos/configs/: branching.jsonc  command-demo.jsonc  fan-out.jsonc  linear.jsonc  refactor-workflow.jsonc  simple.jsonc
crates/gsd_cli/demos/docs-and-validate/: demo.sh
crates/gsd_cli/demos/fan-out/: config.jsonc  demo.sh
crates/gsd_cli/demos/hooks/: config.jsonc  demo.sh  finally-hook.sh  post-hook.sh  pre-hook.sh  process.sh
crates/gsd_cli/demos/linear/: config.jsonc  demo.sh
crates/gsd_cli/demos/refactor-gsd/r1/: analyze-file.md  commit-file.md  config.jsonc  list-files.md  process-refactor-list.md
crates/gsd_cli/demos/simple/: config.jsonc  demo.sh
crates/gsd_cli/scripts/: fan-out-agent.sh  gsd-agent.sh
crates/gsd_cli/src/: main.rs
crates/gsd_cli/tests/: cli_integration.rs  config_subcommands.rs
crates/gsd_cli/tests/common/: mod.rs
crates/gsd_config/: Cargo.toml  README.md
crates/gsd_config/configs/: branching.dot  branching.json  command-demo.dot  fan-out.dot  linear.dot  linear.json  refactor-workflow.dot  refactor-workflow.json  simple.dot  simple.json
crates/gsd_config/demos/: branching.sh  docs-and-validate.sh  linear.sh  simple.sh
crates/gsd_config/schemas/: config.schema.json
crates/gsd_config/src/: config.rs  docs.rs  lib.rs  maybe_linked.rs  resolved.rs  runner.rs  schema.rs  types.rs  value_schema.rs
crates/gsd_config/src/runner/: dispatch.rs  finally.rs  hooks.rs  mod.rs  response.rs  shell.rs  types.rs
crates/gsd_config/tests/: branching_transitions.rs  concurrency.rs  edge_cases.rs  finally_retry_bugs.rs  invalid_transitions.rs  linear_transitions.rs  ordered_agent.rs  retry_behavior.rs  schema_validation.rs  simple_termination.rs
crates/gsd_config/tests/common/: mod.rs
crates/gsd_json/: README.md
crates/gsd_macro/: Cargo.toml
crates/gsd_multiplexer/: Cargo.toml
crates/gsd_multiplexer/src/: daemon.rs  lib.rs  main.rs  submit.rs
crates/gsd_task_queue/: Cargo.toml
crates/gsd_task_queue/src/: lib.rs
crates/gsd_task_queue/tests/: concurrency.rs  simple.rs  split_print.rs  split_print_derive.rs
crates/multiplexer/: AGENT_PROTOCOL.md  Cargo.toml
crates/task_queue/: Cargo.toml  README.md
crates/task_queue/src/: lib.rs
crates/task_queue/tests/: concurrency.rs  simple.rs  split_print.rs  split_print_derive.rs
crates/task_queue_macro/: Cargo.toml
crates/task_queue_macro/src/: gsd_task_macro.rs  lib.rs
demos/: demo-many-agents.sh  demo-single-agent-queue.sh  demo-single-basic.sh
docs/: README.md  mental-model.md
docs-website/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
docs-website/docs/: index.md  quickstart.md  roadmap.md
docs/recipes/: README.md  branching.md  commands.md  fan-in.md  fan-out-finally.md  fan-out.md  hooks.md  linear-pipeline.md  nested-gsd.md  retry.md  validation.md
libs/agent_pool/: README.md  package.json
libs/gsd/: README.md  package.json
libs/gsd-multiplexer/: README.md  index.js  package.json
libs/multiplexer/: .gitignore  cli.js  package.json
pending-refactors/: DAEMON_REFACTOR.md  HEALTH_CHECK_PLAN.md  KEEPALIVE_PLAN.md  NOTIFY_BASED_AGENT_WAITING.md  SYNC_TESTING_HARNESS.md  THREE_LAYER_DAEMON.md  TRANSPORT_ABSTRACTION.md  todos.md
refactors/: PROCESS.md
refactors/past/: AGENT_POOL_COMMAND.md  AGENT_STATUS_REFACTOR.md  ANONYMOUS_WORKERS.md  CANCELLABLE_WAIT_FOR_TASK.md  CLEANUP_MISPLACED_CODE.md  CLI_REVIEW.md  CONFIG_SCHEMA_SUBCOMMAND.md  CROSSBEAM_CHANNELS.md  DAEMON_EVENT_LOOP_SIMPLIFICATION.md  DOCUMENTATION.md  EXPLICIT_INLINE_FORMAT.md  FILE_REORGANIZATION.md  FINALLY_SCHEDULING.md  GSD_POOL_ROOT_FLAG.md  GSD_USE_CLI.md  INLINED_CONFIG.md  KEEPALIVE_PLAN.md  MULTI_DIR_CANARY_VERIFICATION.md  NOTIFY_BASED_AGENT_WAITING.md  STATE_PERSISTENCE.md  THREE_LAYER_DAEMON.md  UNIFIED_LINK_FORMAT.md  VALUE_AND_RETRY_MODEL.md  VERSION_SUBCOMMAND.md  WAIT_FOR_POOL_READY_WATCHER.md
refactors/pending/: AGENT_POOL_COMMAND.md  ANONYMOUS_WORKERS.md  API_SIMPLIFICATION.md  APPLY_PATTERN.md  CANCELLABLE_WAIT_FOR_TASK.md  CONCURRENT_FILE_SUBMISSION_FIX.md  CONFIG_SCHEMA_SUBCOMMAND.md  CROSSBEAM_CHANNELS.md  FINALLY_SCHEDULING.md  FINALLY_TRACKING.md  FS_WATCHER_CLEANUP.md  GSD_POOL_ROOT_FLAG.md  (+18 more)
scripts/: agent.sh  generate-graphs.sh  latest-published.sh  run-all-demos.sh  start-cmd-agents.sh  start-cmd-pool.sh
(+45 files in other folders)
