[workspace]
members = ["./crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rbalicki2/gsd"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.8.0"
interprocess = "2.2"
deluxe = "0.5.0"
hex = "0.4"
notify = "7.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
syn = "2.0.96"
tokio = { version = "1.35", features = ["full"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
redundant_closure_for_method_calls = "warn"
inefficient_to_string = "warn"
implicit_clone = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
match_wildcard_for_single_variants = "warn"
redundant_else = "warn"
manual_let_else = "warn"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
