[workspace]
members = ["./crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/gsd-now/gsd"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
string_id = { path = "./crates/string_id" }
interprocess = "2.2"
notify = "7.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
rstest = "0.24"
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
serde_json = "1.0.108"
tempfile = "3"
syn = "2.0.96"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Prefer explicit type names (InFlight::Task) over Self in match arms
use_self = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
redundant_closure_for_method_calls = "deny"
inefficient_to_string = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
semicolon_if_nothing_returned = "deny"
match_wildcard_for_single_variants = "deny"
redundant_else = "deny"
manual_let_else = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
