[package]
name = "agent_pool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Agent pool daemon for managing workers with file-based task dispatch"
keywords = ["agent", "pool", "task-queue", "daemon", "ipc"]
categories = ["concurrency"]

[dependencies]
interprocess = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
