[package]
name = "agent_pool_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for the agent pool daemon"
keywords = ["agent", "pool", "task-queue", "daemon", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "agent_pool"
path = "src/main.rs"

[lib]
name = "agent_pool_cli"
path = "src/lib.rs"

[dependencies]
agent_pool = { path = "../agent_pool" }
cli_invoker = { path = "../cli_invoker" }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
