[package]
name = "gsd_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for GSD - Get Sh*** Done"
keywords = ["cli", "task", "orchestrator", "state-machine"]
categories = ["command-line-utilities"]

[dependencies]
agent_pool = { path = "../agent_pool" }
gsd_config = { path = "../gsd_config" }
clap = { workspace = true }
json5 = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "gsd"
path = "src/main.rs"

[dev-dependencies]
interprocess = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
