[package]
name = "gsd_config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Declarative config-based task orchestrator library"
keywords = ["task", "orchestrator", "state-machine", "config", "agent"]
categories = ["development-tools"]

[dependencies]
agent_pool = { path = "../agent_pool" }
agent_pool_cli = { path = "../agent_pool_cli" }
cli_invoker = { path = "../cli_invoker" }
jsonschema = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
interprocess = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
