[package]
name = "gsd_task_queue"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gsd_macro = { path = "../gsd_macro" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
