[package]
name = "task_queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async task queue for executing shell scripts with typed responses"
keywords = ["task-queue", "async", "shell", "concurrency"]
categories = ["asynchronous", "concurrency"]

[dependencies]
task_queue_macro = { path = "../task_queue_macro", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
