[package]
name = "task_queue_macro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Derive macro for task queue"
keywords = ["macro", "derive", "task-queue"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true

[lints]
workspace = true
